# mealmap

./: .deepsource.toml  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  Untitled-1.txt  alembic.ini  error_log.txt  pyproject.toml  quick.md  tox.ini
.github/: CODEOWNERS  PRCHECKLIST
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: benchmark.yml  lint-tests.yml  pull-request.yml  security-report.yml  update-docs.yaml
admin/: brikasutils.py  recommendation_test.ipynb  s3.ipynb  seed_recommendation_data.py  test.ipynb  test_data.py  test_extra.py  test_utils.py
deploy/: README.md
deploy/docker/: Dockerfile  Dockerfile.deploy  docker-compose.local.yml  docker-compose.yml
deploy/infra/: README.md
deploy/local/: Makefile  README.md  Tiltfile  kind.yaml
deploy/local/k8s/: app.yaml  config_map.yaml  minio.yaml  postgres.yaml
deploy/local/k8s/monitoring/: grafana.yaml  loki.yaml  mimir.yaml  monitoring-config.yaml  promtail-config.yaml  promtail-daemonset.yaml  tempo.yaml
notes/: code_quality.md  deployment.md  fast-python.md  local_setup_macos.md  poetry_guide.md  prompts.md  tests.md
project-notes/: algo_2.md  algo_logic.md  logic.md  model notes.md
scripts/: db_manage.py
src/: __main__.py  application.py
src/api/: common_schemas.py  dependencies.py  response_schemas.py  routes_admin.py  routes_bookmarks.py  routes_meals.py  routes_places.py  routes_reviews.py  routes_swipes.py  routes_test.py  routes_users.py  utils.py
src/api/auth/: dao.py  dto.py  jwt_utils.py  routes.py
src/conf/: base_settings.py  constants.py  settings.py
src/db/: base.py  base_schema.py  models.py  session.py  setup.py
src/db/migrations/: env.py
src/db/migrations/versions/: 2025-11-04-21-43_85acb3ca8152.py  2025-11-11-14-12_885ec04d5cd8.py  2025-11-11-22-01_f521483e23d8.py  2025-11-12-15-04_dad2dc48a56a.py  2025-11-13-01-16_23f4df2127cb.py  2025-11-14-23-49_88f522a15f46.py  2025-11-22-05-47_198b6e548eb1.py  2025-11-23-19-01_8cc2036de645.py  2025-11-23-22-42_3f3ac79c9a6e.py  2025-11-23-23-32_48f5e9757ce3.py  2025-11-24-01-43_18cc92c4fd62.py  2025-11-24-23-38_ce6be083ff5a.py  2025-11-25-15-27_69423e570357.py  2025-11-25-15-37_5108bf487b2e.py  2025-11-25-15-46_7b1c2286a1e9.py  2025-11-26-12-10_159e599020da.py
src/services/: image_processing.py  recommendation.py  response_builder.py  storage.py
src/utils/: custom_logging.py  date_utils.py  misc_utils.py  pagination.py
tests/: __init__.py
tests/benchmark/: README.md  analyze_benchmarks.py
tests/benchmark/api/: benchmark_api_response.py  benchmark_api_throughput.py
tests/benchmark/db/: benchmark_db_read.py  benchmark_db_write.py  conftest.py
tests/benchmark/functions/: benchmark_fibonacci.py
